--- a/.env_example
+++ b/.env_example
@@ -4,3 +4,32 @@ DATABASE_URL=postgresql+psycopg2://USER:PASSWORD@HOST:5432/morizstudioapp
 # Auth / JWT
 SECRET_KEY=change_me_in_prod
 ALGORITHM=HS256
+
+# Database (choose your driver)
+# For psycopg3: postgresql+psycopg://USER:PASS@HOST:PORT/DB
+# For psycopg2: postgresql+psycopg2://USER:PASS@HOST:PORT/DB
+DATABASE_URL=postgresql+psycopg://USERNAME:PASSWORD@localhost:5432/morizstudioapp
+
+# OpenAI
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+
+
+# AWS (default region; override per-domain if needed)
+AWS_REGION=il-central-1
+# Optional overrides (keep only if you really split regions)
+AWS_REGION_STORAGE=il-central-1
+AWS_REGION_MESSAGING=il-central-1
+
+# S3 buckets (non-secret but environment-specific)
+S3_BUCKET=moriz-dev-core
+S3_BUCKET_SUMMARIES=moriz-ai-summaries-dev
+
+# SNS topics (placeholders – replace with your real account id / names in .env)
+SNS_TOPIC_EVENTS_ARN=arn:aws:sns:il-central-1:<ACCOUNT_ID>:moriz-events
+SNS_TOPIC_STUDIO_EMAILS_ARN=arn:aws:sns:il-central-1:<ACCOUNT_ID>:studio-emails
+SNS_TOPIC_AI_SUMMARY_CREATED=arn:aws:sns:il-central-1:<ACCOUNT_ID>:ai-summary-created
+
+# Redis (optional)
+REDIS_URL=redis://localhost:6379/0
+AI_SUMMARY_CACHE_TTL_SECONDS=86400
