feat(docker): create docker and alembic

--- a/.env_example
+++ b/.env_example
@@ -31,5 +31,19 @@ SNS_TOPIC_STUDIO_EMAILS_ARN=arn:aws:sns:il-central-1:<ACCOUNT_ID>:studio-emails
 SNS_TOPIC_AI_SUMMARY_CREATED=arn:aws:sns:il-central-1:<ACCOUNT_ID>:ai-summary-created
 
 # Redis (optional)
-REDIS_URL=redis://localhost:6379/0
+REDIS_URL=redis://:6379/0
 AI_SUMMARY_CACHE_TTL_SECONDS=86400
+
+#docker settings:
+
+APP_ENV=development
+APP_DEBUG=true
+PORT=8000
+
+APP_MODULE=app.main:app
+
+
+
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db_name
