--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
@@ -33,6 +34,7 @@ passlib==1.7.4
 pillow==11.3.0
 pluggy==1.6.0
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
