build(docker): fix Windows CRLF, install bash, switch healthcheck to python

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
       AWS_SESSION_TOKEN: ${AWS_SESSION_TOKEN:-}
-
       PORT: ${PORT}
       APP_MODULE: ${APP_MODULE}
 
@@ -28,7 +27,7 @@ services:
       - ./:/app:rw
 
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/healthz').read()"]
       interval: 120s
       timeout: 5s
       retries: 5
